# axis-performance

./: .env.example  .gitignore  CLAUDE.md  COMPETITOR_NOTES.md  Makefile  docker-compose.prod.yml  docker-compose.yml  generate_blueprints.py  generate_blueprints_v2.py
backend/: .env.example  .gitignore  Dockerfile  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt
backend/app/: main.py
backend/app/core/: auth.py  config.py  ownership.py  ratelimit.py
backend/app/schemas/: apir.py
backend/app/services/: aerial_roof_service.py  ai_insights.py  ai_pipeline.py  audio_transcription_service.py  blueprint_takeoff_service.py  blueprint_vision_service.py  compliance_engine.py  construction_scheduler.py  cost_engine.py  daily_log_service.py  damage_report_pdf.py  estimator.py  exterior_photo_service.py  exterior_report_pdf.py  flashing_engine.py  footprint_service.py  geometry_service.py  imagery_enhancement_service.py  imagery_service.py  jurisdiction.py  jurisdiction_service.py  link_validator.py  live_pricing_service.py  llm.py  location_service.py  materials_compliance_service.py  materials_engine.py  object_detector.py  ocr.py  permit_package_service.py  photo_autotag_service.py  photo_measurement_service.py  photogrammetry_service.py  pipeline_cost_engine.py  pricing_service.py  proposal_service.py  quantity_takeoff.py  render_queue_service.py  report_generator.py  (+12 more)
backend/scripts/: apir_accuracy_check.py
backend/tests/: conftest.py  test_blueprint_takeoff_service.py  test_daily_log_service.py  test_edge_classifier.py  test_roof_outline_service.py
(+240 files in other folders)
